# zero2prod

./: Cargo.toml  Dockerfile
.github/workflows/: general.yml
configuration/: base.yml  production.yml
migrations/: 20220414193514_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
